fixed spacing on narrow

--- a/styles/site.css
+++ b/styles/site.css
@@ -344,6 +344,7 @@ footer h1{
     padding: 6px 16px;
     margin-left:0px;
     margin-right:0px;
+    margin-bottom:28px;
   }
 
   #widescreen{
